@@ -232,7 +232,7 @@ static int DVDWriteCells(dvd_reader_t * dvd, int cell_start_sector[],
 
 	/* Create VTS_XX_X.VOB */
 	if (title_set == 0) {
-		fprintf(stderr,_("Do not try to copy chapters from the VMG domain; there are not any\n"));
+		fprintf(stderr,_("Do not try to copy chapters from the VMG domain; there are none.\n"));
 		return(1);
 	} else {
 		sprintf(targetname,"%s/%s/VIDEO_TS/VTS_%02i_%i.VOB",targetdir, title_name, title_set, vob);
@@ -946,7 +946,7 @@ static int DVDCopyTitleVobX(dvd_reader_t * dvd, title_set_info_t * title_set_inf
 
 	/* Create VTS_XX_X.VOB */
 	if (title_set == 0) {
-		fprintf(stderr,_("Do not try to copy a Title VOB from the VMG domain; there are not any\n"));
+		fprintf(stderr,_("Do not try to copy a Title VOB from the VMG domain; there are none.\n"));
 		return(1);
 	} else {
 		sprintf(targetname,"%s/%s/VIDEO_TS/VTS_%02i_%i.VOB",targetdir, title_name, title_set, vob);
@@ -970,7 +970,7 @@ static int DVDCopyTitleVobX(dvd_reader_t * dvd, title_set_info_t * title_set_inf
 
 
 	if (stat(targetname, &fileinfo) == 0) {
-		fprintf(stderr, _("The Title file %s exists will try to over write it.\n"), targetname);
+		fprintf(stderr, _("The Title file %s exists; will try to overwrite it.\n"), targetname);
 		if (! S_ISREG(fileinfo.st_mode)) {
 			fprintf(stderr,_("The Title %s file is not valid, it may be a directory\n"), targetname);
 			return(1);
@@ -1048,7 +1048,7 @@ static int DVDCopyMenu(dvd_reader_t * dvd, title_set_info_t * title_set_info, in
 	sprintf(targetname,"%s/%s/VIDEO_TS/%s",targetdir, title_name, filename);
 
 	if (stat(targetname, &fileinfo) == 0) {
-		fprintf(stderr, _("The Menu file %s exists will try to over write it.\n"), targetname);
+		fprintf(stderr, _("The Menu file %s exists; will try to overwrite it.\n"), targetname);
 		if (! S_ISREG(fileinfo.st_mode)) {
 			fprintf(stderr,_("The Menu %s file is not valid, it may be a directory\n"), targetname);
 			DVDCloseFile(dvd_file);
@@ -1120,7 +1120,7 @@ static int DVDCopyIfoBup(dvd_reader_t* dvd, title_set_info_t* title_set_info, in
 	}
 
 	if (stat(targetname_ifo, &fileinfo) == 0) {
-		fprintf(stderr, _("The IFO file %s exists will try to over write it.\n"), targetname_ifo);
+		fprintf(stderr, _("The IFO file %s exists; will try to overwrite it.\n"), targetname_ifo);
 		if (! S_ISREG(fileinfo.st_mode)) {
 			fprintf(stderr,_("The IFO %s file is not valid, it may be a directory\n"), targetname_ifo);
 			return(1);
@@ -1128,7 +1128,7 @@ static int DVDCopyIfoBup(dvd_reader_t* dvd, title_set_info_t* title_set_info, in
 	}
 
 	if (stat(targetname_bup, &fileinfo) == 0) {
-		fprintf(stderr, _("The BUP file %s exists will try to over write it.\n"), targetname_bup);
+		fprintf(stderr, _("The BUP file %s exists; will try to overwrite it.\n"), targetname_bup);
 		if (! S_ISREG(fileinfo.st_mode)) {
 			fprintf(stderr,_("The BUP %s file is not valid, it may be a directory\n"), targetname_bup);
 			return(1);
@@ -1544,7 +1544,7 @@ int DVDMirrorMainFeature(dvd_reader_t * _dvd, char * targetdir,char * title_name
 
 	titles_info = DVDGetInfo(_dvd);
 	if (!titles_info) {
-		fprintf(stderr, _("Guess work of main feature film failed\n"));
+		fprintf(stderr, _("Guesswork of main feature film failed.\n"));
 		return(1);
 	}
 
@@ -1814,7 +1814,7 @@ int DVDDisplayInfo(dvd_reader_t* dvd, char* device) {
 
 	titles_info = DVDGetInfo(dvd);
 	if (!titles_info) {
-		fprintf(stderr, _("Guess work of main feature film failed\n"));
+		fprintf(stderr, _("Guesswork of main feature film failed.\n"));
 		return(1);
 	}
 
